Agregada redireccion dependiendo del modo desarrollo

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "autoload": {
         "psr-4": {
-            "WooMercadoPagosChile\\": "classes/"
+            "WooMercadoPagosChile\\": "classes/",
+            "CTalaTools\\": "helpers/"
         }
     }
 
